# reduce

./: CMakeLists.txt  main.cpp
